--- a/calligraphy.html
+++ b/calligraphy.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Kalam|Permanent+Marker&display=swap" rel="stylesheet">
 	<script src="uikit/js/uikit.min.js"></script>
 	<script src="uikit/js/uikit-icons.min.js"></script>
+	<script src="lazysizes.min.js" async=""></script>
 </head>
 
 
@@ -69,53 +70,54 @@
 			</a>
 	</div>
 
+	<div class="category-first"></div>
 	<div class="uk-child-width-1-5@s uk-child-width-1-6@m" uk-grid="masonry:true" uk-lightbox="animation: fade">
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/calligraphy/calli_1.jpg">
-					<img src="photo/calligraphy/calli_1.jpg" alt="">
+					<img data-src="photo/calligraphy/calli_1.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/calligraphy/calli_2.jpg">
-					<img src="photo/calligraphy/calli_2.jpg" alt="">
+					<img data-src="photo/calligraphy/calli_2.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/calligraphy/calli_3.jpg">
-					<img src="photo/calligraphy/calli_3.jpg" alt="">
+					<img data-src="photo/calligraphy/calli_3.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/calligraphy/calli_4.jpg">
-					<img src="photo/calligraphy/calli_4.jpg" alt="">
+					<img data-src="photo/calligraphy/calli_4.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/calligraphy/calli_5.jpg">
-					<img src="photo/calligraphy/calli_5.jpg" alt="">
+					<img data-src="photo/calligraphy/calli_5.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/calligraphy/calli_6.jpg">
-					<img src="photo/calligraphy/calli_6.jpg" alt="">
+					<img data-src="photo/calligraphy/calli_6.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/calligraphy/calli_7.jpg">
-					<img src="photo/calligraphy/calli_7.jpg" alt="">
+					<img data-src="photo/calligraphy/calli_7.jpg" alt="" class="lazyload">
 				</a>
 			</div>
     </div>
