--- a/photo.html
+++ b/photo.html
@@ -7,6 +7,7 @@
 	<!-- <link rel="preload" as="font" href="/calli/FZHuangKJW.TTF" type="font/ttf" crossorigin="anonymous"> -->
 	<script src="uikit/js/uikit.min.js"></script>
 	<script src="uikit/js/uikit-icons.min.js"></script>
+	<script src="lazysizes.min.js" async=""></script>
 </head>
 
 
@@ -75,42 +76,42 @@
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/chicago/6642.jpg">
-					<img src="photo/chicago/6642.jpg" alt="">
+					<img data-src="photo/chicago/6642.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/chicago/6738.jpg">
-					<img src="photo/chicago/6738.jpg" alt="">
+					<img data-src="photo/chicago/6738.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/chicago/6763.jpg">
-					<img src="photo/chicago/6763.jpg" alt="">
+					<img data-src="photo/chicago/6763.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/chicago/3147.jpg">
-					<img src="photo/chicago/3147.jpg" alt="">
+					<img data-src="photo/chicago/3147.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-middle">
 				<a class="uk-inline" href="photo/chicago/6874.jpg">
-					<img src="photo/chicago/6874.jpg" alt="">
+					<img data-src="photo/chicago/6874.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-middle">
 				<a class="uk-inline" href="photo/chicago/6645.jpg">
-					<img src="photo/chicago/6645.jpg" style="width:auto; height:181px" alt="">
+					<img data-src="photo/chicago/6645.jpg" style="width:auto; height:181px" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
@@ -121,28 +122,28 @@
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/beijing/8445.jpg">
-					<img src="photo/beijing/8445.jpg" alt="">
+					<img data-src="photo/beijing/8445.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/beijing/9465.jpg">
-					<img src="photo/beijing/9465.jpg" alt="">
+					<img data-src="photo/beijing/9465.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/beijing/1173.jpg">
-					<img src="photo/beijing/1173.jpg" alt="">
+					<img data-src="photo/beijing/1173.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/beijing/bj_1.jpg">
-					<img src="photo/beijing/bj_1.jpg" alt="">
+					<img data-src="photo/beijing/bj_1.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
@@ -153,133 +154,133 @@
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/7936.jpg">
-					<img src="photo/hk/7936.jpg" alt="">
+					<img data-src="photo/hk/7936.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/7951.jpg">
-					<img src="photo/hk/7951.jpg" alt="">
+					<img data-src="photo/hk/7951.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/7967.jpg">
-					<img src="photo/hk/7967.jpg" alt="">
+					<img data-src="photo/hk/7967.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8014.jpg">
-					<img src="photo/hk/8014.jpg" alt="">
+					<img data-src="photo/hk/8014.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8025.jpg">
-					<img src="photo/hk/8025.jpg" alt="">
+					<img data-src="photo/hk/8025.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8212.jpg">
-					<img src="photo/hk/8212.jpg" alt="">
+					<img data-src="photo/hk/8212.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8102.jpg">
-					<img src="photo/hk/8102.jpg" alt="">
+					<img data-src="photo/hk/8102.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8354.jpg">
-					<img src="photo/hk/8354.jpg" alt="">
+					<img data-src="photo/hk/8354.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8370.jpg">
-					<img src="photo/hk/8370.jpg" alt="">
+					<img data-src="photo/hk/8370.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8083.jpg">
-					<img src="photo/hk/8083.jpg" style="width:auto; height:181px" alt="">
+					<img data-src="photo/hk/8083.jpg" style="width:auto; height:181px" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8472.jpg">
-					<img src="photo/hk/8472.jpg" alt="">
+					<img data-src="photo/hk/8472.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8481.jpg">
-					<img src="photo/hk/8481.jpg" alt="">
+					<img data-src="photo/hk/8481.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8489.jpg">
-					<img src="photo/hk/8489.jpg" alt="">
+					<img data-src="photo/hk/8489.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8502.jpg">
-					<img src="photo/hk/8502.jpg" alt="">
+					<img data-src="photo/hk/8502.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8518.jpg">
-					<img src="photo/hk/8518.jpg" alt="">
+					<img data-src="photo/hk/8518.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8729.jpg">
-					<img src="photo/hk/8729.jpg" alt="">
+					<img data-src="photo/hk/8729.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8717.jpg">
-					<img src="photo/hk/8717.jpg" alt="">
+					<img data-src="photo/hk/8717.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/8708.jpg">
-					<img src="photo/hk/8708.jpg" alt="">
+					<img data-src="photo/hk/8708.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
 		<div>
 			<div class="uk-flex uk-flex-center uk-flex-middle">
 				<a class="uk-inline" href="photo/hk/7311.jpg">
-					<img src="photo/hk/7311.jpg" alt="">
+					<img data-src="photo/hk/7311.jpg" alt="" class="lazyload">
 				</a>
 			</div>
 		</div>
