--- a/calligraphy.html
+++ b/calligraphy.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="stylesheet" href="uikit/css/uikit.css">
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kalam|Permanent+Marker&display=swap" rel="stylesheet">
+    <title>Hanyu | Calligraphy</title>
 	<script src="uikit/js/uikit.min.js"></script>
 	<script src="uikit/js/uikit-icons.min.js"></script>
 	<script src="lazysizes.min.js" async=""></script>
