--- a/data.html
+++ b/data.html
@@ -6,6 +6,20 @@
 	<link href="https://fonts.googleapis.com/css?family=Kalam|Permanent+Marker&display=swap" rel="stylesheet">
 	<script src="uikit/js/uikit.min.js"></script>
 	<script src="uikit/js/uikit-icons.min.js"></script>
+    <title>Hanyu | Data</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta name="viewport" content="initial-scale=1.0, user-scalable=yes, width=device-width"> -->
+    <meta content="initial-scale=1.0, user-scalable=yes">
+<!--     <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" /> -->
+    <style>
+        html,
+        body,
+     /*   #container {
+          width: 100%;
+          height: 100%;
+        }*/
+    </style>
 </head>
 
 
@@ -69,6 +83,80 @@
 			</a>
 	</div>
 
+	<div class="category-first">西安停车位</div>
+	<div id="container" class="map" style="width:800px; height:500px; margin-left:200px"></div>
+
+	<script type="text/javascript" src='looots.js'></script>
+	<script src="https://webapi.amap.com/maps?v=1.4.15&key=d2938057c4d6d25d8be3ac6bffae372c"></script>
+	<script src="https://webapi.amap.com/loca?v=1.3.2&key=d2938057c4d6d25d8be3ac6bffae372c"></script>
+	<script src="jquery-3.4.1.min.js"></script>
+	<script>
+	    var map = new AMap.Map('container', {
+	        resizeEnable: true, //是否监控地图容器尺寸变化
+	        zoom:12, //初始化地图层级
+	        center: [108.9380646, 34.2646472], //初始化地图中心点,
+	        mapStyle: 'amap://styles/74bdd3d47ac30acaf4170ad279832d59',
+	        keyboardEnable: false
+	        // mapStyle: 'amap://styles/normal',
+	    });
+		// map.setFeatures("road");  // 单一种类要素显示
+
+
+	    AMap.plugin(['AMap.Autocomplete','AMap.PlaceSearch'],function(){
+	      var autoOptions = {
+	        city: "西安", //城市
+	        input: "keyword"//使用联想输入的input的id
+	      };
+	      autocomplete= new AMap.Autocomplete(autoOptions);
+	      var placeSearch = new AMap.PlaceSearch({
+	            city:'西安',
+	            map:map
+	      })
+	      AMap.event.addListener(autocomplete, "select", function(e){
+	         //TODO 针对选中的poi实现自己的功能
+	         placeSearch.setCity(e.poi.adcode);
+	         placeSearch.search(e.poi.name)
+	      });
+	    });
+
+
+	    var style = [{
+	        url: 'https://a.amap.com/jsapi_demos/static/images/mass0.png',
+	        anchor: new AMap.Pixel(6, 6),
+	        size: new AMap.Size(7, 7)
+	    }, {
+	        url: 'https://a.amap.com/jsapi_demos/static/images/mass0.png',
+	        anchor: new AMap.Pixel(6, 6),
+	        size: new AMap.Size(7, 7)
+	    }, 
+	    {
+	        url: 'https://a.amap.com/jsapi_demos/static/images/mass1.png',
+	        anchor: new AMap.Pixel(4, 4),
+	        size: new AMap.Size(7, 7)
+	    }, {
+	        url: 'https://a.amap.com/jsapi_demos/static/images/mass2.png',
+	        anchor: new AMap.Pixel(3, 3),
+	        size: new AMap.Size(7, 7)
+	    }
+	    ];
+
+	    var mass = new AMap.MassMarks(lots, {
+	        opacity: 0.8,
+	        zIndex: 111,
+	        cursor: 'pointer',
+	        style: style
+	    });
+
+	    var marker = new AMap.Marker({content: ' ', map: map});
+
+	    mass.on('mouseover', function (e) {
+	        marker.setPosition(e.data.lnglat);
+	        marker.setLabel({content: e.data.name})
+	    });
+
+	    mass.setMap(map);
+	    mass.setStyle(style);
+	</script>
 	<footer>
 		<p>© 2019 Hanyu Wang</p>
 	</footer>
