--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Hanyu Wang, Engineer, U of I ECE '18 grad</title>
+    <title>Hanyu | Engineering</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Le styles -->
@@ -127,7 +127,7 @@
                         The course used Python and PyTorch. I learned main structures like CNN, RNN, LSTM, etc. and main applications like object detection and NLP. <br>
 
                         <a name="address" class="pull-right">
-                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/receptive%20field.png" width="150px" height="150px">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/tree/master/img/receptive%20field.png" width="150px" height="150px">
                         </a>
 
                         <div style="text-indent: -3.25em; margin-left: 3.25em;"> <b> HW 1 - </b> Implemented and trained a neural network from scratch in Python for the MNIST dataset (no PyTorch). 
@@ -186,7 +186,7 @@
                     </p>
                     <p class="abstract-text">
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418_1.png" width="115px" height="115px">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/tree/master/img/418_1.png" width="115px" height="115px">
                         </a>
                         <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 1 - Badge Animation </b> <br>
                             Modeled Illinois Victory Badge with a 2-D mesh of triangles; <br>
@@ -196,7 +196,7 @@
                         <hr style="height:15pt; visibility:hidden;" />
 
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418_2.png" width="115px" height="115px">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/tree/master/img/418_2.png" width="115px" height="115px">
                         </a>
                         <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 2 - Flight Simulator </b> <br>
                             Generated a terrain with diamond-square algorithm; <br>
@@ -206,7 +206,7 @@
                         </div> <br> <br>
 
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/418_4.png" width="115px" height="115px">
+                            <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/tree/master/img/418_4.png" width="115px" height="115px">
                         </a>
                         <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 4 - 3-D Particle System </b> <br>
                             Rendered a system of bouncing spheres in a 3-D box, where user can manually generate new spheres in it; <br>
@@ -221,7 +221,7 @@
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/445_3.jpg" width="115px" height="115px">
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/tree/master/img/445_3.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
                     <div style="text-indent: 0.05em; margin-left: 0.35em;">
@@ -245,7 +245,7 @@
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/391_4.jpg" width="115px" height="115px">
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/tree/master/img/391_4.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
                     <div style="text-indent: 0.05em; margin-left: 0.35em;">
@@ -265,7 +265,7 @@
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/master/img/385_4.jpg" width="115px" height="115px">
+                    <img class="media-object" src="https://raw.githubusercontent.com/bunnywhy/bunnywhy.github.io/tree/master/img/385_4.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
                     <div style="text-indent: 0.05em; margin-left: 0.35em;">
