--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </p>
                     <p class="abstract-text">
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://github.com/bunnywhy/bunnywhy.github.io/tree/master/img/418_1.png" width="115px" height="115px">
+                            <img class="media-object" src="img/418_1.png" width="115px" height="115px">
                         </a>
                         <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 1 - Badge Animation </b> <br>
                             Modeled Illinois Victory Badge with a 2-D mesh of triangles; <br>
@@ -189,7 +189,7 @@
                         <hr style="height:15pt; visibility:hidden;" />
 
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://github.com/bunnywhy/bunnywhy.github.io/tree/master/img/418_2.png" width="115px" height="115px">
+                            <img class="media-object" src="img/418_2.png" width="115px" height="115px">
                         </a>
                         <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 2 - Flight Simulator </b> <br>
                             Generated a terrain with diamond-square algorithm; <br>
@@ -199,7 +199,7 @@
                         </div> <br> <br>
 
                         <a name="address" class="pull-left">
-                            <img class="media-object" src="https://github.com/bunnywhy/bunnywhy.github.io/tree/master/img/418_4.png" width="115px" height="115px">
+                            <img class="media-object" src="img/418_4.png" width="115px" height="115px">
                         </a>
                         <div style="text-indent: 0.05em; margin-left: 9.25em;"> <b> MP 4 - 3-D Particle System </b> <br>
                             Rendered a system of bouncing spheres in a 3-D box, where user can manually generate new spheres in it; <br>
@@ -214,7 +214,7 @@
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://github.com/bunnywhy/bunnywhy.github.io/tree/master/img/445_3.jpg" width="115px" height="115px">
+                    <img class="media-object" src="img/445_3.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
                     <div style="text-indent: 0.05em; margin-left: 0.35em;">
@@ -238,7 +238,7 @@
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://github.com/bunnywhy/bunnywhy.github.io/tree/master/img/391_4.jpg" width="115px" height="115px">
+                    <img class="media-object" src="img/391_4.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
                     <div style="text-indent: 0.05em; margin-left: 0.35em;">
@@ -258,7 +258,7 @@
 
             <div class="media">
                 <a name="address" class="pull-left">
-                    <img class="media-object" src="https://github.com/bunnywhy/bunnywhy.github.io/tree/master/img/385_4.jpg" width="115px" height="115px">
+                    <img class="media-object" src="img/385_4.jpg" width="115px" height="115px">
                 </a>
                 <div class="media-body">
                     <div style="text-indent: 0.05em; margin-left: 0.35em;">
